RESOLVED FIXED268845
REGRESSION: Google search results are cropped when viewing in the smallest window size
https://bugs.webkit.org/show_bug.cgi?id=268845
Summary REGRESSION: Google search results are cropped when viewing in the smallest wi...
Tim Horton
Reported 2024-02-06 11:10:18 PST
REGRESSION: Google search results are cropped when viewing in the smallest window size
Attachments
Tim Horton
Comment 1 2024-02-06 11:10:22 PST
Tim Horton
Comment 2 2024-02-06 11:14:46 PST
EWS
Comment 3 2024-02-06 14:58:29 PST
Committed 274173@main (da1f44819e66): <https://commits.webkit.org/274173@main> Reviewed commits have been landed. Closing PR #23943 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.