REGRESSION: Google search results are cropped when viewing in the smallest window size https://bugs.webkit.org/show_bug.cgi?id=268845 rdar://121400620

Reviewed by Aditya Keerthi.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _isWindowResizingEnabled]):
_enhancedWindowingEnabled was recently flipped on (which is correct), but caused
some unexpected viewport regressions on visionOS. To maintain the status quo,
override it to NO for the time being.

Canonical link: https://commits.webkit.org/274173@main